# discordLevelingSystem

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  LICENSE  README.md  pyproject.toml  python-package.yml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
discordLevelingSystem/: __init__.py  announcement.py  card_settings.py  decorators.py  errors.py  leveling_system.py  levels_xp_needed.py  member_data.py  rank_card.py  role_awards.py
examples/: advanced_event_example.py  advanced_leaderboard_example.py  basic.py  basic_event_example.py
